@@ -1,3 +1,8 @@
+2007-12-15  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/tarball.py: reconfigure tarballs when -a specified,
+	patch by Craig Keogh (closes: #502278)
+
 2007-12-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* modulesets/gnome-suites-2.22.modules: gnome-python-desktop now
